# irrigation-controller

./: README.md  irrigation_programs.json  pyproject.toml
esp8266/: boot.py  main.py
irrigation_controller/: irrigation_controller.py
